2022-03-11  Elliott Williams  <emw@apple.com>

        Makefile.shared: Rename WORKSPACE to WORKSPACE_PATH and allow overrides
        https://bugs.webkit.org/show_bug.cgi?id=237746

        Reviewed by Alexey Proskuryakov.

        This permits Make-based workflows which build out of a different workspace, e.g. a workspace
        that includes WebKitAdditions.

        WORKSPACE_PATH was chosen as a new name for parity with SCRIPTS_PATH and to avoid confusion
        with USE_WORKSPACE.

        Refactors Makefile.shared a bit to prevent SCHEME or WORKSPACE_PATH being set without
        USE_WORKSPACE from breaking the build.

        * Makefile.shared:

2022-03-08  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] Support multiple metadata locations
        https://bugs.webkit.org/show_bug.cgi?id=237395
        <rdar://problem/89715863>

        Reviewed by Dewei Zhu.

        * metadata/git_config_extension: Renamed from metadata/project_config.
        * metadata/project_config: Renamed to metadata/git_config_extension.

2022-03-10  Elliott Williams  <emw@apple.com>

        [XCBuild] Fix GeneratedSources dependency validation errors
        https://bugs.webkit.org/show_bug.cgi?id=237490

        Reviewed by Alexey Proskuryakov.

        Fixes miscellanous targets which were not specifying their task outputs correctly.

        For easier dependency validation testing, Make builds now recognize a VALIDATE_DEPENDENCIES
        setting. Building with VALIDATE_DEPENDENCIES=YES or VALIDATE_DEPENDENCIES=YES_ERROR passes
        the setting to xcodebuild and sets a magic xattr on the build directory so that product
        files in it are validated.

        * Makefile.shared:

2022-03-07  Basuke Suzuki  <basuke.suzuki@sony.com>

        Update Basuke Suzuki's status to reviewer
        https://bugs.webkit.org/show_bug.cgi?id=237545

        Unreviewed.

        * metadata/contributors.json:

2022-03-07  Jonathan Bedard  <jbedard@apple.com>
